--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "flowershow",
-  "version": "2.0.3",
+  "name": "flowershow-ssr",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "npm run generate && next dev",
-    "prebuild": "npm run generate",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export",
-    "mddb": "mddb ./content",
-    "generate": "cross-env NODE_OPTIONS=\"--experimental-json-modules --experimental-modules\" node -r esbuild-register ./scripts/prebuild.mjs"
+    "export": "next export"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -24,7 +21,6 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "hastscript": "^7.2.0",
-    "mddb": "^0.2.1",
     "mdx-mermaid": "2.0.0-rc7",
     "next": "13.3.0",
     "next-mdx-remote": "^4.4.1",
@@ -41,7 +37,6 @@
     "remark-smartypants": "^2.0.0",
     "remark-toc": "^8.0.1",
     "strip-markdown": "^5.0.0",
-    "typed.js": "^2.0.12",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
