--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@libsql/client": "^0.3.6",
     "@portaljs/core": "^1.0.7",
     "@portaljs/remark-callouts": "^1.0.5",
     "@portaljs/remark-embed": "^1.0.4",
     "@portaljs/remark-wiki-link": "^1.1.0",
+    "@prisma/adapter-libsql": "^5.5.0",
+    "@prisma/client": "^5.5.0",
     "@silvenon/remark-smartypants": "^2.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.14.2",
@@ -47,6 +50,7 @@
     "globby": "^13.1.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "prisma": "^5.5.0",
     "remark": "^14.0.2",
     "tailwindcss": "^3.2.7"
   }
